--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 
 </style>
 </head>
-<body background="C:\Users\THIS PC\Documents\pro\image\pic.jpg">
+<body background="pic.jpg">
 <div class="nav">
 <a href="www.facebook.com">Facebook</a>
 <a href="https://www.linkedin.com/uas/login">LinkedIn</a>
-<a href="file:///C:/Users/THIS%20PC/Documents/pro/port.html">Portfolio</a>
+<a href="port.html">Portfolio</a>
 </div>
 <button type="button" onclick="alert('This is Shambhavi')">Click Me!</button>
 <ol start="20">
@@ -39,7 +39,7 @@
 
 <div class="row">
 	<div class="column">
-		<img src="C:\Users\THIS PC\Documents\pro\image\india.jpg" alt="Picture of India">
+		<img src="india.jpg" alt="Picture of India">
 	</div>
 	<div class="column">
 <p>India is a vast South Asian country with diverse terrain – from Himalayan peaks to Indian Ocean coastline – and history reaching back 5 millennia. In the north, Mughal Empire landmarks include Delhi’s Red Fort complex and massive Jama Masjid mosque, plus Agra’s iconic Taj Mahal mausoleum. Pilgrims bathe in the Ganges in Varanasi, and Rishikesh is a yoga centre and base for Himalayan trekking.</p>
