--- a/port.html
+++ b/port.html
@@ -13,7 +13,7 @@
    <h1><b>PORTFOLIO</b></h1>
 <div class="row">
 	<div class="column">
-		<img src="C:\Users\THIS PC\Documents\pro\image\me.jpg" alt="Picture of me">
+		<img src="me.jpg" alt="Picture of me">
 	</div>
 	<div class="column">
 <ol>
